--- a/src/main/resources/data/touhouorigins/powers/kappa_out_of_water.json
+++ b/src/main/resources/data/touhouorigins/powers/kappa_out_of_water.json
@@ -62,7 +62,7 @@
         "actions": [
           {
             "type": "apoli:change_resource",
-            "resource": "touhouorigins:kappa_out_of_water_resource",
+            "resource": "*:*_resource",
             "change": 20
           },
           {
@@ -77,7 +77,7 @@
       },
       "else_action": {
         "type": "apoli:change_resource",
-        "resource": "touhouorigins:kappa_out_of_water_resource",
+        "resource": "*:*_resource",
         "change": -1
       }
     },
@@ -103,7 +103,7 @@
     "interval": 100,
     "condition": {
       "type": "apoli:resource",
-      "resource": "touhouorigins:kappa_out_of_water_resource",
+      "resource": "*:*_resource",
       "comparison": "<=",
       "compare_to": 0
     }
