Almost ready for first release

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 0.5.0-1.19.2
-	maven_group = com.example
+	maven_group = net.maxmani
 	archives_base_name = touhouorigins
 
 # Dependencies
