--- a/src/main/resources/data/touhouorigins/powers/apparition_appetite.json
+++ b/src/main/resources/data/touhouorigins/powers/apparition_appetite.json
@@ -2,7 +2,7 @@
   "type": "apoli:modify_exhaustion",
   "modifier": {
     "name": "No exhaustion",
-    "operation": "multiply_total_multiplicative",
+    "operation": "multiply_total",
     "value": -1
   }
 }
