--- a/src/main/resources/data/touhouorigins/powers/deadly_snow.json
+++ b/src/main/resources/data/touhouorigins/powers/deadly_snow.json
@@ -5,7 +5,7 @@
     "projectile": "minecraft:snowball"
   },
   "modifier": {
-    "operation": "add_base_early",
+    "operation": "addition",
     "value": 2
   }
 }
