--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.18
-	loader_version=0.14.9
+	minecraft_version=1.18.2
+	yarn_mappings=1.18.2+build.4
+	loader_version=0.14.10
 
 # Mod Properties
-	mod_version = 0.5.0-1.19.2
+	mod_version = 0.4.0-1.18.2
 	maven_group = net.maxmani
 	archives_base_name = touhouorigins
 
 # Dependencies
-	fabric_version=0.61.0+1.19.2
-	origins_version=v1.7.0
-	apugli_version=1.9.2+1.19-fabric
+	fabric_version=0.59.1+1.18.2
+	origins_version=v1.4.1
+	apugli_version=1.6.2
 	pehkui_version=3.4.2
