--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.11
+	minecraft_version=1.19.3
+	yarn_mappings=1.19.3+build.5
+	loader_version=0.14.13
 
 # Mod Properties
-	mod_version = 0.8.3-1.19.2
-	maven_group = net.maxmani
+	mod_version = 0.9.0-1.19.3
+	maven_group = net.reimaden.touhouorigins
 	archives_base_name = touhouorigins
 
 # Dependencies
-	fabric_version=0.61.0+1.19.2
-	origins_version=v1.7.1
-	apugli_version=1.11.2+1.19-fabric
-	pehkui_version=3.4.2
+	fabric_version=0.73.0+1.19.3
+	origins_version=v1.8.1
+	apugli_version=1.12.1+1.19.3-fabric
+	pehkui_version=3.6.3
