--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,12 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.13
 
 # Mod Properties
-	mod_version = 0.9.0-1.19.3
+	mod_version = 0.9.1-1.19.3
 	maven_group = net.reimaden.touhouorigins
 	archives_base_name = touhouorigins
 
 # Dependencies
 	fabric_version=0.73.0+1.19.3
 	origins_version=v1.8.1
-	apugli_version=1.12.1+1.19.3-fabric
+	apugli_version=1.12.2+1.19.3
 	pehkui_version=3.6.3
