--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.13
 
 # Mod Properties
-	mod_version = 0.9.1-1.19.3
-	maven_group = net.reimaden.touhouorigins
+	mod_version = 0.9.1
+	maven_group = net.reimaden
 	archives_base_name = touhouorigins
 
 # Dependencies
