--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.5
-	loader_version=0.14.19
+	minecraft_version=1.19.4
+	yarn_mappings=1.19.4+build.2
+	loader_version=0.14.21
 
 # Mod Properties
 	mod_version = 0.9.3
@@ -13,7 +13,7 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = touhouorigins
 
 # Dependencies
-	fabric_version=0.76.1+1.19.3
-	origins_version=v1.8.1
-	apugli_version=1.13.3+1.19.3
-	pehkui_version=3.6.3
+	fabric_version=0.83.0+1.19.4
+	origins_version=1.9.0
+	apugli_version=2.1.0+1.19.4
+	pehkui_version=3.7.5
