--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.8
-	loader_version=0.14.21
+	yarn_mappings=1.20.1+build.10
+	loader_version=0.14.22
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,7 +13,7 @@ org.gradle.jvmargs=-Xmx2G
 	archives_base_name = touhouorigins
 
 # Dependencies
-	fabric_version=0.84.0+1.20.1
-	origins_version=1.10.0
-	apugli_version=2.5.1+1.20.1
-	pehkui_version=3.7.6
+	fabric_version=0.87.0+1.20.1
+	origins_version=v1.10.0
+	apugli_version=2.6.5+1.20.1
+	pehkui_version=3.7.8
