Rewrite Vengeful Spirit

--- a/src/main/resources/data/touhouorigins/powers/common/apparition_appetite.json
+++ b/src/main/resources/data/touhouorigins/powers/common/apparition_appetite.json
@@ -11,5 +11,8 @@
   "hunger_immunity": {
     "type": "apoli:effect_immunity",
     "effect": "minecraft:hunger"
+  },
+  "disable_regen": {
+    "type": "apoli:disable_regen"
   }
 }
