--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.4-SNAPSHOT'
+	id 'fabric-loom' version '1.5-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -26,20 +26,23 @@ repositories {
 		}
 	}
 	maven {
-		url "https://maven.jamieswhiteshirt.com/libs-release"
+		url = "https://maven.jamieswhiteshirt.com/libs-release"
 		content {
 			includeGroup "com.jamieswhiteshirt"
 		}
 	}
 	maven {
-		url "https://maven.shedaniel.me/"
+		url = "https://maven.shedaniel.me/"
 	}
 	maven {
-		url "https://maven.terraformersmc.com/"
+		url = "https://maven.terraformersmc.com/"
 	}
 	maven {
 		name = "Modrinth"
 		url = "https://api.modrinth.com/maven"
+	}
+	maven {
+		url = "https://masa.dy.fi/maven"
 	}
 	// Keep JitPack below other repositories
 	maven {
