--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,4 @@ archives_base_name=touhouorigins
 # Dependencies
 fabric_version=0.91.6+1.20.2
 origins_version=1.12.3
-# Library isn't ready yet, so we're using commit hashes
-voile_version=6d8879f
+voile_version=1.0.0
